fixed sidebar last link not visible issue, nav bar menu close suddenly

--- a/Faculty_login.css
+++ b/Faculty_login.css
@@ -1,34 +1,34 @@
-div.content1{
+/* div.content1{
   margin-left:30%;
   margin-right:15%;
   padding:5%;
-}
+} */
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
+/* div.content {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
-}
+} */
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .sidebar {
-    width: 100%;
+    width: 200px;
     height: auto;
     position: relative;
   }
   .sidebar a {float: left;}
   div.content {margin-left: 0;}
-}
+} */
 
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
   .sidebar a {
     text-align: center;
     float: none;
   }
-}
+} */
 
 #submit1{
   background-color: #00bceb;
@@ -39,9 +39,13 @@ div.content {
   background-size: contain;
 }
 
-div.Details {
-  padding-left: 400px;
-  padding-top: 50px;
+div.Details, div.content1, div.content {
+  /* margin-left should match with sidebar width */
+  margin-left: 20%;
+  /* margin-top should match with (or a bit more than) navbar height */
+  margin-top: 50px;
+  padding: 1px 16px;
+  position: relative;
 }
 
 #cv{
@@ -56,7 +60,8 @@ div.Details {
 /* contents of sidebar */
 
 .sidebar {
-  height: 100%;
+  /* fixed height of sidebar for last option to be visible by using calc */
+  height: calc(100% - 50px);
   width: 20%;
   position: fixed;
   z-index: 1;
@@ -64,8 +69,10 @@ div.Details {
   left: 0;
   background-color: #014566;
   overflow-x: hidden;
-  overflow-y: visible;
-  padding-bottom: 50px;
+  overflow-y: scroll;
+  /* margin-top: 50px; */
+  /* padding-bottom: 50px; */
+  margin-bottom: 0px;
 }
 .sidebar a {
   padding: 16px 10px 10px 32px;
@@ -76,6 +83,7 @@ div.Details {
 
 .sidebar a:hover {
   color: #f1f1f1;
+  text-decoration: none;
 }
 /* Links on mouse-over */
 .sidebar .selectonly a:hover:not(.active) {
@@ -84,7 +92,7 @@ div.Details {
 }
 
 .main {
-  margin-left: 200px; /* Same as the width of the sidenav */
+  margin-left: 20%; /* Same as the width of the sidenav */
 }
 
 @media screen and (max-height: 450px) {
